fixed teachers main  page and edit profile page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -87,32 +87,36 @@
 		<div class="container" style="padding:0 3% 0 3%;">
 
 		<div class ="row">
-			<div class = "col-sm-5"><p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi leo, tincidunt vel malesuada et, auctor eu est. Vivamus dapibus efficitur efficitur. Integer tempus consequat bibendum. Nam suscipit, augue in convallis blandit, odio metus sagittis neque, vel aliquet tellus neque accumsan libero. Pellentesque id consequat diam, ut tempus purus. Nam erat nisl, commodo interdum convallis at, tincidunt id justo. Vestibulum rhoncus vitae urna ac euismod. Sed sit amet pellentesque ipsum, nec pulvinar nisl. Duis tortor arcu, auctor nec felis vitae, cursus congue magna. Suspendisse a est viverra, semper tortor eu, luctus nisl.</p>
+			<div class = "col-md-12"><p>
+		
+		    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Announcement</h2>
+      </div>
+      <div class="panel-body">
+      <h3>Welcome To Timee!</h3>
+      <p>Welcome and thank you for joining timee. We make timee simple and easy to use for teachers and students. If you have any questions, concerns or feedbacks, please let us know by clicking the Contact Us button below.</p>
+     	</div>
+  	</div>
 
-		<p>Mauris ornare finibus lacus in posuere. Integer in elit in ligula consequat laoreet. Vestibulum cursus sagittis est ac accumsan. Praesent at justo aliquet, vulputate sem nec, dapibus mi. Morbi augue risus, ullamcorper a fringilla dignissim, sagittis ut diam. Nullam mollis erat eu enim bibendum molestie. Fusce ut tincidunt odio. Nam venenatis aliquam nunc, non fermentum eros tempus vehicula.
+      <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Students Online</h2>
+      </div>
+      <div class="panel-body">
+      </div>
+    </div>
 
-		Nunc a placerat sem. Aenean euismod congue sem, et rutrum ante mollis et. Nunc luctus justo sit amet elit sollicitudin, vitae imperdiet nisl sodales. Aliquam commodo sapien id interdum feugiat. Sed eget maximus lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce bibendum, erat ut laoreet convallis, turpis velit euismod turpis, nec dignissim ligula nisl nec sapien. In hac habitasse platea dictumst. In non tellus non nulla lacinia sollicitudin.</p>
-		<p>
-		Maecenas accumsan lacus non porttitor ornare. Proin accumsan lacus placerat, tincidunt ligula sit amet, fermentum dolor. Nam malesuada turpis magna, ut ullamcorper felis molestie iaculis. Aenean id blandit diam. Sed non aliquet nibh. Nam nec fermentum mi. Nunc accumsan feugiat ex nec blandit. Cras pretium nibh a ligula aliquam, vitae scelerisque mi facilisis.</p>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Teachers Online</h2>
+      </div>
+      <div class="panel-body">
+      </div>
+    </div>
+  </div>
 
-		<p>Sed posuere placerat nulla vitae tempus. Nullam auctor, dui id cursus finibus, nisl mauris ornare eros, a gravida felis nunc ac lectus. Nullam commodo lectus id vulputate cursus. Sed a sem viverra, ornare leo ut, porttitor sapien. Fusce eu velit in orci vehicula aliquet faucibus vel velit. Duis eget varius dui. Donec sit amet lectus urna. Pellentesque lacinia enim id tincidunt auctor. Fusce vitae purus sed magna fermentum vulputate sit amet id ante. In porttitor erat vitae quam faucibus, a eleifend lorem commodo. Aliquam rhoncus tincidunt turpis sit amet gravida. Pellentesque finibus elementum magna sed convallis.</p>
 
-		<p>Duis eget sapien placerat, mollis nulla volutpat, fringilla massa. Phasellus id posuere arcu. Praesent hendrerit odio id libero vulputate efficitur. Sed vitae luctus dolor. Curabitur feugiat orci a augue mattis, id condimentum nibh facilisis. Sed interdum odio risus, vel efficitur diam mattis eu. Vestibulum porttitor diam at felis euismod, in fringilla neque imperdiet. Morbi quis nibh iaculis, imperdiet eros sit amet, ultricies dui. Suspendisse pulvinar, lorem ac porttitor convallis, mauris nunc iaculis ligula, eget luctus lectus urna id erat. Aenean suscipit eros hendrerit augue condimentum pretium et id neque. Sed vel diam id ligula tincidunt dapibus et sed ex. Vestibulum lorem odio, tincidunt id malesuada molestie, lobortis quis erat. Ut blandit dui in nisl consequat, pharetra pulvinar ante malesuada.</p>
-		</div>
-
-		<div class = "col-sm-7"><p>
-		Mauris laoreet ipsum velit, vel accumsan urna convallis vel. Curabitur aliquam eros sed libero scelerisque, at varius augue iaculis. Etiam aliquam ac tellus ut fringilla. Aliquam porta orci ac nunc ullamcorper gravida. Duis hendrerit rhoncus quam eu aliquam. Vivamus ut eleifend augue, scelerisque faucibus lacus. Nulla cursus leo quam. Suspendisse ultricies eros in pretium hendrerit. Nunc feugiat dolor lacus. Vivamus in maximus ante, ac elementum odio. Proin dictum gravida dui. Donec aliquet orci vitae orci dapibus viverra. Proin ultricies ligula eu metus dictum venenatis. Pellentesque rhoncus tortor ultricies ex iaculis malesuada. Suspendisse dignissim tortor elementum lacinia bibendum. Vivamus a quam at arcu commodo facilisis eu eget orci.</p>
-
-		<p>Fusce hendrerit ut mi suscipit condimentum. Sed ipsum massa, molestie vitae semper id, fermentum at ligula. Nunc quis tortor laoreet, bibendum ligula sed, pretium felis. Sed ut elit nibh. Nunc aliquam metus vel gravida ultricies. Mauris vel pellentesque lorem. Suspendisse neque nulla, elementum eget ultricies iaculis, gravida ac augue. Sed massa odio, finibus at massa at, molestie sodales dui. Pellentesque posuere id ipsum vitae sollicitudin. Phasellus ac eleifend est, eu semper sem.</p>
-
-		<p>Nullam scelerisque ex in ligula auctor, at pretium libero varius. Nunc sed mi in ex imperdiet lacinia in facilisis eros. Donec vitae libero sed odio luctus semper. Quisque eu leo venenatis, tempus velit id, convallis sapien. Fusce sagittis rutrum tortor egestas molestie. Maecenas quis sollicitudin dolor. Nam vel nulla vel justo euismod aliquet ac eget libero. Nunc non pharetra metus. Suspendisse lectus ex, volutpat vel accumsan efficitur, luctus vel tellus.</p>
-
-		<p>Duis eget sapien placerat, mollis nulla volutpat, fringilla massa. Phasellus id posuere arcu. Praesent hendrerit odio id libero vulputate efficitur. Sed vitae luctus dolor. Curabitur feugiat orci a augue mattis, id condimentum nibh facilisis. Sed interdum odio risus, vel efficitur diam mattis eu. Vestibulum porttitor diam at felis euismod, in fringilla neque imperdiet. Morbi quis nibh iaculis, imperdiet eros sit amet, ultricies dui. Suspendisse pulvinar, lorem ac porttitor convallis, mauris nunc iaculis ligula, eget luctus lectus urna id erat. Aenean suscipit eros hendrerit augue condimentum pretium et id neque. Sed vel diam id ligula tincidunt dapibus et sed ex. Vestibulum lorem odio, tincidunt id malesuada molestie, lobortis quis erat. Ut blandit dui in nisl consequat, pharetra pulvinar ante malesuada.</p>
-
-		<p>Fusce hendrerit ut mi suscipit condimentum. Sed ipsum massa, molestie vitae semper id, fermentum at ligula. Nunc quis tortor laoreet, bibendum ligula sed, pretium felis. Sed ut elit nibh. Nunc aliquam metus vel gravida ultricies. Mauris vel pellentesque lorem. Suspendisse neque nulla, elementum eget ultricies iaculis, gravida ac augue. Sed massa odio, finibus at massa at, molestie sodales dui. Pellentesque posuere id ipsum vitae sollicitudin. Phasellus ac eleifend est, eu semper sem.</p>
-
-		<p>Nullam scelerisque ex in ligula auctor, at pretium libero varius. Nunc sed mi in ex imperdiet lacinia in facilisis eros. Donec vitae libero sed odio luctus semper. Quisque eu leo venenatis, tempus velit id, convallis sapien. Fusce sagittis rutrum tortor egestas molestie. Maecenas quis sollicitudin dolor. Nam vel nulla vel justo euismod aliquet ac eget libero. Nunc non pharetra metus. Suspendisse lectus ex, volutpat vel accumsan efficitur, luctus vel tellus.</p>
 
 		</div>
 		</div>
