fixed edit page and activation page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -129,11 +129,26 @@
 		<% end %>
 		
 <% else %>
-<p style="text-align: center">Your application is currently under review, please complete your Teacher's Profile by clicking the profile menu at the top. Thank you</p>
+<div class="col-md-12">
+
+<div class="panel panel-success">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Announcement</h2>
+      </div>
+      <div class="panel-body">
+      <h3>Welcome To Timee!</h3>
+      <p>Welcome and thank you for joining timee. We make timee simple and easy to use for teachers and students. If you have any questions, concerns or feedbacks, please let us know by clicking the Contact Us button below.</p>
+
+
+	<p style="text-align: center">Your application is currently under review, please complete your Teacher's Profile by clicking the profile menu at the top. Thank you</p>
+     	</div>
+  	</div>
+
 <% end %>
 
 <% else %>
 
+</div>
 
 
 
