--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -115,16 +115,49 @@
       <div class="panel panel-info">
       <div class="panel-heading">
         <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Students Online</h2>
+
       </div>
       <div class="panel-body">
+      	    <% @students_online.each do |u| %>
+      	<div class="col-md-3" style="border: 1px solid #ccc;">
+      	   
+      	       	
+
+      	       <%# if u.last_seen_at.present?
+      	       		if u.last_seen_at > 5.minutes.ago %>
+
+      	       		<img src="<%= u.picture %>" style="height: 100px;" class="center-block">
+      	       		<p class="text-center"><%= u.name %></p>
+
+	       		<%# end %>
+	       	<%# end %>
+
+       </div>
+       <% end %>
       </div>
     </div>
 
     <div class="panel panel-default">
       <div class="panel-heading">
         <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Teachers Online</h2>
+
       </div>
       <div class="panel-body">
+      	<div class="col-md-3" style="border: 1px solid #ccc;">
+
+      	       <% @teachers_online.each do |u| %>
+
+
+       		      	<% if u.last_seen_at.present?
+      	       			if u.last_seen_at > 5.minutes.ago %>
+      	            <img src="<%= u.picture %>" style="height: 100px;" class="center-block">
+      	       		<p class="text-center"><%= u.name %></p>
+
+       		<% end %>
+       		<% end %>
+
+       </div>
+       	<% end %>
       </div>
     </div>
   </div>
