--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -120,15 +120,15 @@ span.input-group-addon i {
 
 
             <div class="form-group">
-              <label for="email" class="hidden-xs">ニックネーム</label>
+              <label for="user_name" class="hidden-xs">ニックネーム</label>
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-user" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.email_field :name, class: 'form-control', :placeholder => 'ニックネーム', :value => current_user.name %>
+                  <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム', :value => current_user.name %>
                 </div>
             </div>
 
             <div class="form-group">
-              <label for="email" class="hidden-xs">メールアドレス</label>
+              <label for="user_email" class="hidden-xs">メールアドレス</label>
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-envelope fa" style="color:#948c8c" aria-hidden="true"></i></span>
                   <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス', :value => current_user.email %>
@@ -136,7 +136,7 @@ span.input-group-addon i {
             </div>
 
             <div class="form-group">
-              <label for="password" class="hidden-xs">パスワード</label>
+              <label for="user_password" class="hidden-xs">パスワード</label>
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
                    <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード' %>
@@ -144,17 +144,17 @@ span.input-group-addon i {
             </div>
 
             <div class="form-group">
-              <label for="confirm" class="hidden-xs">確認用パスワード</label>
+              <label for="user_password_confirmation" class="hidden-xs">確認用パスワード</label>
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード', :required => '' %>
+                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード' %>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <label for="username" class="hidden-xs">スカイプID</label>
+              <label for="user_skype" class="hidden-xs">スカイプID</label>
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-skype" style="color:#948c8c" aria-hidden="true"></i></span>
@@ -164,7 +164,7 @@ span.input-group-addon i {
             </div>
 
               <div class="form-group">
-              <label for="photo1" class="hidden-xs">Picture</label>
+              <label for="user_picture" class="hidden-xs">Picture</label>
                   <%= f.file_field :picture, class: 'form-control-file' %>
                   <small id="fileHelp" class="form-text text-muted">Please add a profile picture</small>
               </div>
@@ -282,7 +282,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-skype" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'Skype ID', :required => ''  %>
+                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'Skype ID' %>
                 </div>
               </div>
             </div>
