change skype logo image

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -74,8 +74,8 @@
         </div>
 </div>
 <hr/>
-      <h2 style="font-family: Open-sans">スタートクラス</h2>
-      <a href="skype:<%= @user.skype %>?call"><i class="fa fa-skype fa-5x"></i></a>
+      <h2 style="font-family: Open-sans">&#x2193;スタートクラス&#x2193;</h2>
+      <a href="skype:<%= @user.skype %>?call"><img src="../../../skype_call.png" class="img img-responsive center-block"></a>
 
       <h3 style="font-size:20px; font-family: 'Work Sans', sans-serif;">skype : <%= @user.skype %></h3>
 
