added icon for it english

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -42,7 +42,7 @@
 </div>
 
 <div class="col-md-6">
-      <strong><h4 style="padding-top: 0;">どの授業を受けますか？</h4></strong><hr>
+      <strong><h4 style="padding-top: 0;">どの授業を受けますか？</h4></strong>
 
       <div class="col-md-12">
         <div class="col-md-4">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col-md-4">
-          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="role_playing" name = "role_playing">&nbsp IT English</a></p></span></label>
+          <label for="it_english"><img src="../../it_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="it_english" name = "it_english">&nbsp IT English</a></p></span></label>
         </div>
 </div>
 <hr/>
