--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, "Dashboard") %>
 
 <!--先生ダッシュボード-->
-<br/>
-<div class="row">
+<div class="col-md-12" style="margin-top: 20px;">
   <div class="col-md-3">
        <div class="thumbnail">
           <img src="<%= @user.picture %>" alt="...">
@@ -11,10 +10,9 @@
           </div>
        </div>
   </div>
-  <div class="col-md-3">
 
+  <div class="col-md-3">
     <div class="panel panel-info">
- 
       <div class="panel-heading">
         <h2 class="panel-title"><span class="pull-right fa fa-money"></span>Total Earnings</h2>
       </div>
@@ -30,7 +28,6 @@
 
   </div>
   <div class="col-md-3">
-
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-headphones"></span>Status</h2>
@@ -52,7 +49,6 @@
 
   </div>
   <div class="col-md-3">
-
     <div class="panel panel-success">
       <div class="panel-heading">
         <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Total</h2>
@@ -64,11 +60,7 @@
     </div>
   </div>
 
-
-
-
-</div></div>
-
+</div>
 
 
 
