minor fixes on the home page

--- a/app/views/history/show.html.erb
+++ b/app/views/history/show.html.erb
@@ -118,7 +118,10 @@ end
         <div class="col-md-12">
         <div class="main-login main-center col-md-12 nopadding">
         <h5 class="text-center hidden-xs"><%= title %></h5>
-            <table class="table table-bordered table-hover">
+        <% if current_user.type_user == 'teacher' %>
+        <a href="#" class="btn btn-info">Withdraw Money</a>
+        <% end %>
+            <table class="table table-bordered table-hover" style="margin-top: 10px;">
             <tr class="info">
               <th>Transaction Type</th>
               <th>Type</th>
