--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -316,7 +316,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-briefcase" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :job, class: 'form-control', :placeholder => 'Former Job', :required => ''  %>
+                  <%= f.text_field :job, class: 'form-control', :placeholder => 'Profession, e.g. Nurse, Pharmacist, Teacher, etc.', :required => ''  %>
                 </div>
               </div>
             </div>
